# jiaobenyouhua-duanship

./: .gitignore  CONTRIBUTING.md  GUIDE.md  LICENSE  README.md  pyproject.toml
examples/: output_example.md  sample_script.txt
examples/shooting-scripts/: SCRIPT-METHODOLOGY.md  SCRIPT-TEMPLATE.md
src/storyboard/: __init__.py  cli.py  exporters.py  generator.py  models.py  prompts.py
tests/: test_basic.py
